--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
     scrollbar-width: none;  /* Hide scrollbar for Firefox */
-    user-select: none;
+    /* user-select: none; */
     -webkit-tap-highlight-color: transparent;
     scroll-behavior: smooth;
     font-kerning: auto;
