--- a/style.css
+++ b/style.css
@@ -4,11 +4,49 @@
     --color3 : #E9DAC1;
     --color4 : #54BAB9;
     --almostBlack : #161617;
+    --logo-filter-light: invert(0);
+    --logo-filter-dark: invert(1);
+    --vt-c-black: #181818;
+    --vt-c-black-soft: #222222;
+    --vt-c-black-mute: #282828;
+    --vt-c-indigo: #2c3e50;   
+
+    --color-text2: #815B5B;
+    --color-text3: #d15b16;
 
     --dot3Width : 6px;
     --dot3Height : var(--dot3Width);
+    --dot3-background-color: #181818;
     --animateSpeed: 400ms;
 }
+:root {
+    --color-background: var(--color1);
+    --color-text: var(--almostBlack);
+    --color-border-cell: var(--vt-c-black);
+    --color-background-table-odd: var(--color3);
+    --color-background-table-even: var(--color2);
+    --logo-filter: var(--logo-filter-light);
+    --dot3-background-color: var(--vt-c-black);
+    --rootwords-text: var(--almostBlack);
+}
+@media (prefers-color-scheme:dark) {
+    :root {
+        --color-background: var(--vt-c-black);
+        --color-text: var(--color1);
+        --color-border-cell: var(--color3);
+        --color-background-table-odd: var(--vt-c-indigo);
+        --color-background-table-even: var(--vt-c-black-soft);
+        --logo-filter: var(--logo-filter-dark);
+        --dot3-background-color: var(--color1);
+        --rootwords-text: var(--color-text2);
+    }
+}
+@media screen and (min-width:1280px) {
+    .list-all-buttons:hover, #searchBtn:hover, #nextBtn:hover, #prevBtn:hover, #scrollTopBtn:hover {
+        background-color:  var(--vt-c-indigo);
+        color: var(--color2);
+}}
+
 *{
     margin: 0;
     padding: 0;
@@ -34,7 +72,12 @@ body {
     align-items: center;
     gap: 15px;
     margin: 10px 0px 50px 0px;
-    background-color: var(--color1);
+    background-color: var(--color-background);
+    color: var(--color-text);
+    transition: color 0.5s, background-color 0.5s;
+}
+h5, a {
+    color: var(--color-text)
 }
 #logo-ctnr {
     width: 400px;
@@ -44,6 +87,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    filter: var(--logo-filter);
 }
 .inputForm {
     display: flex;
@@ -54,16 +98,14 @@ body {
     flex-basis: 1;
     width: 100%;
     height: 30px;
-    border: 1px solid var(--almostBlack);
+    /* border: 1px solid var(--almostBlack); */
+    border: none;
     background-color: var(--color4);
     border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
 }
-#searchBtn:hover {
-    background-color: var(--almostBlack);
-    color: var(--color2);
-}
+
 #list-all-root-resource-btn-ctnr {
     display: flex;
     gap: 5px;
@@ -73,19 +115,17 @@ body {
     flex-basis: 1;
     width: 100%;
     height: 25px;
-    border: 1px solid var(--almostBlack);
+    border: 1px solid var(--color-border);
     background-color: var(--color4);
     border-radius: 5px;
     font-size: 14px;
     cursor: pointer;
 }
-.list-all-buttons:hover {
-    background-color:  var(--almostBlack);
-    color: var(--color2);
-}
+
 .inputField {
     flex-basis: 1;
-    border: 1px solid var(--almostBlack);
+    border: 1px solid var(--vt-c-black-soft);
+    /* border: none; */
     transition: 0.7s;
     width: 100%;
     height: 30px;
@@ -132,36 +172,35 @@ body {
     cursor: pointer;
     background-color: var(--color4);
 }
-#nextBtn:hover, #prevBtn:hover {
-    background-color:  var(--almostBlack);
-    color: var(--color2);
-}
+
 #nextBtn-ctnr, #prevBtn-ctnr {
     flex-basis: 1;
 }
+
 li {
     list-style: none;
+    color: var(--color-text);
 }
 .tapIcon {
     width: 25px;
     height: 25px;
+    filter: var(--logo-filter)
 }
 .root-words-with-results {
     width: auto;
     height: 100%;
     font-size: 16px;
-    color: var(--color4);
+    color: var(--color-text);
     font-style: italic;
     cursor: pointer;
     border-color: transparent;
-    background-color: none;
+    background-color: var(--color-text3);
+    border-radius: 5px;
+    padding: 0px 10px;
 }
 .root-words-without-results {
-    color: #815B5B;
+    color: var(--color-text);
     font-style: italic;
-}
-.underline-when-hovered:hover {
-    text-decoration: dotted underline var(--almostBlack) 1px;
 }
 .underline-when-hovered {
     display: flex;
@@ -174,10 +213,10 @@ table {
     margin: 2px 0px 20px 0px;
 }
 table:nth-child(2n+1) {
-    background-color: var(--color3);
+    background-color: var(--color-background-table-odd);
 }
 table:nth-child(2n) {
-    background-color: var(--color2);
+    background-color: var(--color-background-table-even);
 }
 .card-infobox {
     width: 400px;
@@ -185,9 +224,10 @@ table:nth-child(2n) {
 
 tr, td, th {
     width: auto;
-    border: 1px solid gray;
+    border: 1px solid var(--color-border-cell);
     text-align: center;
     padding: 5px 2px;
+    color: var(--color-text)
 }
 .flexRowWrap {
     max-width: 400px;
@@ -212,12 +252,10 @@ tr, td, th {
     border-radius: 10px; /* Rounded corners */
     font-size: 18px; /* Increase font size */
 }
-#scrollTopBtn:hover {
-    background-color: var(--almostBlack); /* Add a dark-grey background on hover */
-    color: var(--color1); /* Text color */
+
+.retrieving, b, em {
+    color: var(--dot3-background-color);
 }
-
-
 .dot3-animation-ctnr {
     width: calc(var(--dot3Width) * 5);
     height: calc(var(--dot3Height) * 5);
@@ -232,7 +270,8 @@ tr, td, th {
     position: absolute;
     width: var(--dot3Width);
     height: var(--dot3Height);
-    background-color: black;
+    background-color: var(--dot3-background-color);
+    border: none;
     border-radius: 9999px;
     transform: translate(0%, -50%);
     top: 50%;
@@ -251,13 +290,25 @@ tr, td, th {
     content: "";
     width: var(--dot3Width);
     height: var(--dot3Height);
-    background-color: black;
+    background-color: var(--dot3-background-color);
+    border: none;
     border-radius: 9999px;
     animation-name: dot3-sides-animate;
     animation-duration: var(--animateSpeed);
     animation-timing-function: linear;
     animation-delay: 0s;
     animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: none;
+    animation-play-state: running;
+    /* animation-play-state: paused; */
+}
+button:focus {
+    animation-name: button-press;
+    animation-duration: 100ms;
+    animation-timing-function: linear;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
     animation-direction: normal;
     animation-fill-mode: none;
     animation-play-state: running;
@@ -281,3 +332,9 @@ tr, td, th {
     50%  {height: var(--dot3Height);            }
     100% {height: calc(var(--dot3Height)*3);    }
 }
+@keyframes button-press {
+    0%   {transform: scale(1);    }
+    50%  {transform: scale(0.93);    }
+    100% {transform: scale(1);    }
+}
+
